--- a/app/src/main/res/layout/activity_session_detail.xml
+++ b/app/src/main/res/layout/activity_session_detail.xml
@@ -9,9 +9,9 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginBottom="@dimen/side_margin"
-        android:layout_marginLeft="@dimen/side_margin"
-        android:layout_marginRight="@dimen/side_margin"
+        android:layout_marginBottom="@dimen/default_padding"
+        android:layout_marginLeft="@dimen/default_padding"
+        android:layout_marginRight="@dimen/default_padding"
         android:orientation="vertical">
 
         <TextView
@@ -30,7 +30,7 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/list_item_subtext"
-            android:textSize="@dimen/regular_text_size" />
+            android:textSize="@dimen/default_text_size" />
 
         <ListView
             android:id="@+id/session_list_speakers"
