--- a/app/src/main/res/layout/fragment_wc.xml
+++ b/app/src/main/res/layout/fragment_wc.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:textColor="@color/empty_view_text"
         android:textSize="@dimen/empty_view_text_size"
-        android:padding="@dimen/normal_padding"
+        android:padding="@dimen/default_padding"
         android:visibility="gone" />
 
     <android.support.v4.widget.SwipeRefreshLayout
