--- a/app/src/main/res/layout/fragment_wcdetails_speaker.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_speaker.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,11 +10,11 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
+        android:padding="@dimen/default_padding"
         android:text="@string/speaker_to_be_announced"
         android:textColor="@color/empty_view_text"
         android:textSize="@dimen/empty_view_text_size"
-        android:padding="@dimen/normal_padding"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
@@ -24,9 +25,9 @@
             android:id="@+id/speaker_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/small_top_margin"
             android:divider="@null"
-            android:scrollbars="vertical" />
+            android:paddingTop="@dimen/medium_margin"
+            android:scrollbars="vertical"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
