--- a/app/src/main/res/layout/item_header_session.xml
+++ b/app/src/main/res/layout/item_header_session.xml
@@ -10,13 +10,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/medium_margin"
         android:textColor="@color/list_item_subtext"
-        android:textSize="@dimen/regular_text_size" />
+        android:textSize="@dimen/default_text_size" />
 
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/side_margin"
-        android:layout_marginRight="@dimen/side_margin"
+        android:layout_marginEnd="@dimen/default_padding"
+        android:layout_marginRight="@dimen/default_padding"
         android:layout_marginTop="@dimen/medium_margin"
         android:background="@drawable/line" />
 
@@ -24,7 +24,7 @@
         android:id="@+id/wc_detail_speaker_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/side_margin"
+        android:layout_marginTop="@dimen/default_padding"
         android:text="@string/title_speakers"
         android:textColor="@color/list_item_text"
         android:textSize="@dimen/text_size_18sp" />
