--- a/app/src/main/res/layout/item_header_speaker.xml
+++ b/app/src/main/res/layout/item_header_speaker.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal">
 
         <org.wordcamp.android.widgets.CircularImageView
-            android:id="@+id/speaker_dp"
+            android:id="@+id/speaker_avatar"
             android:layout_width="@dimen/speaker_dp_size"
             android:layout_height="@dimen/speaker_dp_size"
             android:layout_marginLeft="@dimen/list_item_header_speaker_dp_margin"
@@ -20,8 +20,8 @@
             android:id="@+id/speaker_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/side_margin"
-            android:layout_marginStart="@dimen/side_margin"
+            android:layout_marginLeft="@dimen/default_padding"
+            android:layout_marginStart="@dimen/default_padding"
             android:autoLink="all"
             android:textColor="@color/list_item_subtext"
             android:textSize="16sp" />
@@ -30,8 +30,8 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/side_margin"
-        android:layout_marginRight="@dimen/side_margin"
+        android:layout_marginEnd="@dimen/default_padding"
+        android:layout_marginRight="@dimen/default_padding"
         android:layout_marginTop="@dimen/medium_margin"
         android:background="@drawable/line" />
 
@@ -39,7 +39,7 @@
         android:id="@+id/session_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/side_margin"
+        android:layout_marginTop="@dimen/default_padding"
         android:text="@string/title_sessions"
         android:textColor="@color/list_item_text"
         android:textSize="@dimen/text_size_18sp" />
