--- a/app/src/main/res/layout/item_session_by_speaker.xml
+++ b/app/src/main/res/layout/item_session_by_speaker.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="@dimen/item_session_height"
+    android:minHeight="@dimen/list_item_default_height"
     android:orientation="vertical">
 
     <TextView
@@ -10,11 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/side_margin"
-        android:layout_marginLeft="@dimen/side_margin"
-        android:layout_marginStart="@dimen/side_margin"
+        android:layout_marginBottom="@dimen/default_padding"
+        android:layout_marginLeft="@dimen/default_padding"
+        android:layout_marginStart="@dimen/default_padding"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/list_item_text"
-        android:textSize="@dimen/regular_text_size" />
+        android:textSize="@dimen/default_text_size" />
 </RelativeLayout>
