--- a/app/src/main/res/layout/item_wordcamp.xml
+++ b/app/src/main/res/layout/item_wordcamp.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:maxLines="2"
             android:textColor="@color/list_item_text"
-            android:textSize="@dimen/regular_text_size"/>
+            android:textSize="@dimen/default_text_size"/>
 
         <TextView
             android:id="@+id/up_wc_dates"
