--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -6,8 +6,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/almost_white">
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/default_padding">
 
@@ -145,7 +144,7 @@
                         android:background="@drawable/divider"/>
 
                     <Button
-                        android:id="@+id/navigate_button"
+                        android:id="@+id/visit_website_button"
                         style="?android:attr/borderlessButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
