--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/grey_light" />
+            <solid android:color="@color/transparent12_grey_dark" />
         </shape>
     </item>
 </layer-list>
