--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,8 @@
 
         <!-- EditText and all other controls color -->
         <item name="colorControlNormal">@color/text</item>
-        <item name="colorControlActivated">@color/text</item>
-        <item name="colorControlHighlight">@color/text</item>
+        <item name="colorControlActivated">@color/blue_light</item>
+        <item name="colorControlHighlight">@color/blue_dark</item>
 
         <item name="android:windowBackground">@color/window_background</item>
     </style>
