--- a/app/src/main/res/layout/item_wordcamp.xml
+++ b/app/src/main/res/layout/item_wordcamp.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout android:id="@+id/layoutContainer"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/list_item_padding">
+<RelativeLayout
+    android:id="@+id/layoutContainer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:padding="@dimen/list_item_padding">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,14 +20,14 @@
             android:layout_height="match_parent"
             android:maxLines="2"
             android:textColor="@color/list_item_text"
-            android:textSize="@dimen/default_text_size"/>
+            android:textSize="@dimen/default_text_size" />
 
         <TextView
             android:id="@+id/up_wc_dates"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/list_item_subtext"
-            android:textSize="@dimen/wc_date_title_text"/>
+            android:textSize="@dimen/wc_date_title_text" />
     </LinearLayout>
 
     <ImageView
@@ -35,5 +37,5 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_favorite_outline_24dp"/>
+        android:src="@drawable/ic_favorite_outline_24dp" />
 </RelativeLayout>
