--- a/app/src/main/res/layout/fragment_wc.xml
+++ b/app/src/main/res/layout/fragment_wc.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
