--- a/app/src/main/res/layout/activity_speaker_detail.xml
+++ b/app/src/main/res/layout/activity_speaker_detail.xml
@@ -10,7 +10,6 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_margin="@dimen/default_padding"
         android:orientation="vertical">
 
         <ListView
@@ -28,7 +27,7 @@
         android:layout_height="fill_parent"
         android:visibility="gone">
 
-        <org.wordcamp.android.widgets.CircularImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/zoomProfilePic"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
