--- a/app/src/main/res/layout/item_session_by_speaker.xml
+++ b/app/src/main/res/layout/item_session_by_speaker.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
     android:minHeight="@dimen/list_item_default_height"
     android:orientation="vertical">
 
