--- a/app/src/main/res/layout/fragment_wcdetails_speaker.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_speaker.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@android:color/white"
     android:layout_height="match_parent">
 
     <TextView
@@ -21,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/speaker_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
